--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.1",
+    "fontsource-roboto": "^3.0.3",
     "react": "^17.0.1",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
