--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "install": "npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
@@ -22,5 +22,14 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sahibamj/Project-3.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/sahibamj/Project-3/issues"
+  },
+  "homepage": "https://github.com/sahibamj/Project-3#readme"
 }
