--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-moment": "^1.0.0",
+    "react-phone-number-input": "^3.1.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-text-mask": "^5.4.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {},
