--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.11.7"
+    "mongoose": "^5.11.7",
+    "react-swipeable-views": "^0.13.9"
   },
   "repository": {
     "type": "git",
