--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
@@ -13,6 +14,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.1",
+    "axios": "^0.21.0",
     "date-fns": "^2.16.1",
     "fontsource-roboto": "^3.0.3",
     "react": "^17.0.1",
